
syntax = "proto3";

package api.core.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";


option go_package = "github.com/tkeel-io/core/api/core/v1;v1";
option java_multiple_files = true;
option java_package = "api.core.v1";

service Topic {
    rpc TopicEventHandler(TopicEventRequest) returns(TopicEventResponse) {
		option (google.api.http) = {
			post : "/topic"
			body : "*"
		};
    }
}

message TopicEventRequest {
    string id = 1;
    string specversion = 2;
    string type = 3;
    string source = 4;
    string datacontenttype = 5;
    google.protobuf.Value data = 6;
    string data_base64 = 7;
    string subject = 8;
    string topic = 9;
    string pubsubname = 10;
}

message TopicEventResponse {
    string status = 1;
}
